tests/baselines/reference/parserModuleDeclaration6.errors.txt
parserModuleDeclaration6.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== parserModuleDeclaration6.ts (1 errors) ====
    module number {
           ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }